<resources>

    <string name="app_name">TwitterSearch</string>
    <string name="searchURL">http://search.twitter.com/search?q=</string>
    <string name="tagPrompt">Tag your query</string>
    <string name="queryPrompt">Enter Twitter seach query</string>
    <string name="taggedSearches">Tagged searches</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="OK">OK</string>
    <string name="missingTitle">Missing Text</string>
    <string name="missingMessage">Please enter a search quesry and tag it</string>
    <string name="confirmTitle">Are you sure?</string>
    <string name="confirmMessage">This will delete all saved seaches</string>
    <string name="erase">erase</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_twitter_search">TwitterSearch</string>
    <string name="save">save</string>
    <string name="clearTags">Clear Tags</string>

</resources>